--- a/Portfolio_Site/html/index.html
+++ b/Portfolio_Site/html/index.html
@@ -212,8 +212,8 @@
                         <span>설명: 가상의 동아리 모임 사이트 입니다. 프론트 버전은 임시 데이터가 들어가 있습니다.</span>
                     </div>
                     <div class="btn_nox">
-                        <a href="https://snowhswasd.github.io/Portfolio2/team_portfolio_front/html/mainPage(index).html"><button>사이트 이동<br>(프론트)</button></a>
-                        <a href="https://github.com/snowhswasd/re-meet"><button>깃허브 이동<br>(프론트+백)</button></a>
+                        <a href="https://snowhswasd.github.io/Portfolio_Re-Meet_Front/Re-Meet_Front/html/index.html"><button>사이트 이동<br>(프론트)</button></a>
+                        <a href="https://github.com/snowhswasd/Portfolio_Re-Meet_Team"><button>깃허브 이동<br>(프론트+백)</button></a>
                     </div>
                 </div>
             </div>
@@ -230,7 +230,7 @@
                         <span>설명: 가상의 음식점 사이트 입니다. 메인 영역의 메뉴판, 공지사항 버튼을 클릭 시 다른 페이지로 이동 합니다.</span>
                     </div>
                     <div class="btn_nox">
-                        <a href="https://snowhswasd.github.io/Portfolio1/portfolio1/main_page(index).html"><button>사이트 이동</button></a>
+                        <a href="https://snowhswasd.github.io/Portfolio_Toast-Waffle/Toast_Waffle/html/index.html"><button>사이트 이동</button></a>
                     </div>
                 </div>
             </div>
