--- a/Portfolio_Site/html/index.html
+++ b/Portfolio_Site/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>종합 포트폴리오</title>
     <link rel="stylesheet" href="../css/main_page.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 </head>
