--- a/Portfolio_Site/html/index.html
+++ b/Portfolio_Site/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>종합 포트폴리오</title>
+    <title>Document</title>
     <link rel="stylesheet" href="../css/main_page.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 </head>
@@ -199,6 +199,23 @@
         </section>  
         <section class="section_4 sec_box sec_pos" id="portfolio">
             <h1 class="sec_title">PORTFOLIO</h1>
+            <div class="sec4_inner sec_inner">
+                <div class="portfolio_img pf_img3"></div>
+                <div class="pf_txt_outer">
+                    <div class="portfolio_txt">
+                        <span class="pf_title">KH-PARK(팀 프로젝트)</span>
+                        <span>뷰포트: Responsive Web</span>
+                        <span>스킬: Html, Css, JavaScript</span>
+                        <span>제작기간: 2024.07.15 ~ 2024.07.21</span>
+                        <span>페이지: 메인 페이지,티켓팅 페이지, 마이 페이지, 검색결과 페이지, 로그인 페이지, 회원가입 페이지</span>
+                        <span>참여도: 프론트(100%)</span>
+                        <span>설명: 가상의 공연 예매 사이트 입니다.</span>
+                    </div>
+                    <div class="btn_nox">
+                        <a href="https://snowhswasd.github.io/Portfolio_KH-PARK/Kh_Park/html/index.html"><button>사이트 이동</button></a>
+                    </div>
+                </div>
+            </div>
             <div class="sec4_inner sec_inner">
                 <div class="portfolio_img pf_img2"></div>
                 <div class="pf_txt_outer">
